word wrap fix

--- a/static/less/cases.less
+++ b/static/less/cases.less
@@ -69,7 +69,8 @@ footer {
   width: 33%
 }
 .read-value {
-  width: 66%
+  width: 66%;
+  word-break: break-word;
 }
 form {
   input[type="checkbox"] {
